--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,52 +10,58 @@ h1 {
     justify-content: space-around;
 }
 
-.germany {
+#germany {
     margin: 10px;
     text-align: center;
     font-size: 20px;
     width: 200px;
-    height: 100px;
+    height: 150px;
+    color: rgb(224, 165, 17);
     border-radius: 8px;
-    background-color: aquamarine;
+    background: url(../images/germany_flag.png);
 }
 
-.france {
+#france {
     margin: 10px;
+    text-align: center;
+    font-size: 20px;
     width: 200px;
-    height: 100px;
+    height: 150px;
+    color: rgb(224, 165, 17);
     border-radius: 8px;
-    background-color: rgb(141, 104, 104);
+    background: url(../images/france2.svg.png);
 }
 
-.germany {
+#italy {
     margin: 10px;
+    text-align: center;
+    font-size: 20px;
     width: 200px;
-    height: 100px;
+    height: 150px;
+    color: rgb(224, 165, 17);
     border-radius: 8px;
-    background-color: rgb(134, 173, 233);
+    background: url(../images/italy1.png);
 }
 
-.italy {
+#england {
     margin: 10px;
+    text-align: center;
+    font-size: 20px;
     width: 200px;
-    height: 100px;
+    height: 150px;
+    color: rgb(255, 184, 3);
     border-radius: 8px;
-    background-color: rgb(31, 99, 57);
+    background: url(../images/uk2.jpg);
 }
 
-.england {
+#australia {
     margin: 10px;
+    text-align: center;
+    font-size: 20px;
     width: 200px;
-    height: 100px;
+    height: 150px;
+    color: rgb(255, 184, 3);
+    margin-left: 45px;
     border-radius: 8px;
-    background-color: rgb(38, 32, 227);
-}
-
-.australia {
-    margin: 10px;
-    width: 200px;
-    height: 100px;
-    border-radius: 8px;
-    background-color: rgb(161, 195, 234);
+    background: url(../images/Flag-Australia1.jpg);
 }
