Change body background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url(../images/map-117174_1280.png); 
+    background: url(../images/world-map.png); 
 }
 h1 {
     text-align: center;
