--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,15 @@ h1 {
     justify-content: space-around;
 }
 
-#submit_button {
+.submit-btn {
     text-align: center;
+    border-radius: 6px;
+    width: 80px;
+    height: 29px;
+    margin: 5px;
+    background-color: #ccc9c9;
 }
+
 
 #germany {
     margin: 10px;
@@ -92,7 +98,6 @@ h1 {
     width: 200px;
     height: 150px;
     color: rgb(35, 30, 17);
-    margin-left: 45px;
     border-radius: 8px;
     background: url(../images/australia_flag.jpg);
 }
