--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,18 @@ h1 {
     background-color: #ccc9c9;
 }
 
+.reset-btn {
+    text-align: center;
+    border-radius: 6px;
+    width: 100px;
+    height: 70px;
+    background-color: #ccc9c9;
+}
+.reset-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
 
 #germany {
     margin: 10px;
