--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,9 @@ h1 {
 #resetButton {
     text-align: center;
     border-radius: 6px;
-    width: 100px;
-    height: 70px;
+    font-size: 25px;
+    width: 180px;
+    height: 50px;
     background-color: #ccc9c9;
 }
 .reset-container {
