--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,21 @@ h1 {
     font-size: 30px;
 }
 
+h2 {
+    text-align: center;
+    font-size: 30px;
+}
+
 .flex {
     display: flex;
     flex-flow: wrap;
     justify-content: space-around;
 }
-
+/* answersubmit buttons */
 .submit-btn {
     text-align: center;
 }
-
+/* answer reset buttton */
 #resetButton {
     text-align: center;
     border-radius: 6px;
@@ -29,23 +34,33 @@ h1 {
     text-align: center;
     margin-top: 20px;
 }
-
+/* high score button */
 .view-highscores {
     text-align: center;
 }
 
 .btn {
     text-align: center;
-    text-decoration: none;
-    border-radius: 6px;
-    font-size: 15px;
-    width: 180px;
-    height: 50px;
     color: black;
-    background-color: #ccc9c9;
+    display: block;
+    padding: 0.5rem 0.8rem;
+    margin: 1rem auto;
+    border: 2px solid;
+    width: 150px;
+    height: 30px;
+    border-radius: 6px;
+    background: #ccc9c9;
+    text-decoration: none;
+    font-size: 25px;
+}
+/* footer */
+footer {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 100px;
 }
 
-
+/* quiz questions */
 #germany {
     margin: 10px;
     text-align: center;
