--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,21 @@ footer {
     text-align: center;
     font-size: 20px;
     padding-top: 100px;
+    margin-top: 80px;
+}
+
+#highscores {
+    margin-top: 1rem;
+    width: 250px;
+    margin-left: 53px;
+    border-collapse: collapse;
+}
+
+#highscores tr {
+    background-color: #ccc9c9;
+    border: 3px solid black;
+    height: 40px;
+    font-size: 20px;
 }
 
 /* quiz questions */
