--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@ h2 {
 /* answersubmit buttons */
 .submit-btn {
     text-align: center;
+    border-radius: 3px;
+    margin-top: 5px;
+    font-size: 1em;
+    width: 80px;
+    height: 30px;
 }
 /* answer reset buttton */
 #resetButton {
@@ -34,10 +39,7 @@ h2 {
     text-align: center;
     margin-top: 20px;
 }
-/* high score button */
-.view-highscores {
-    text-align: center;
-}
+
 
 .btn {
     text-align: center;
@@ -61,24 +63,6 @@ footer {
     margin-top: 80px;
 }
 
-#highscores {
-    margin-top: 1rem;
-    width: 250px;
-    margin-left: 53px;
-    border-collapse: collapse;
-}
-
-#highscores tr {
-    background-color: #ccc9c9;
-    border: 3px solid black;
-    height: 40px;
-    font-size: 20px;
-}
-
-tbody {
-    margin: 0;
-    box-sizing: border-box;
-}
 
 /* quiz questions */
 #germany {
@@ -171,23 +155,43 @@ tbody {
     font-size: 30px;
 }
 
-/* Media query: Tablets and larger (320 and more) */
-@media screen and (min-width: 320px) {
-    #highscores {
-        margin-left: 345px;
-    }
+/* Basic styling for the modal */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Media query: Tablets and larger (400 and more) */
-@media screen and (min-width: 400px) {
-    #highscores {
-        margin-left: 345px;
-    }
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
 }
 
-/* Media query: Tablets and larger (1440 and more) */
-@media screen and (min-width: 1440px) {
-    #highscores {
-        margin-left: 345px;
-    }
+/* Close button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
