--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ h2 {
     text-align: center;
     border-radius: 3px;
     margin-top: 5px;
-    font-size: 1em;
+    font-size: 15px;
     width: 80px;
     height: 30px;
 }
